# kyops

./: LICENSE  README.md
Python/: .gitignore  README.md  pyproject.toml
Python/kyops/: __init__.py  kyops.py  n_dict.py
Python/tests/: base_test.py  test_kyops.py
