[project]
name = "kyops"
version = "0.0.1"
description = "kyops Python library for performing operations on data structures in python"
authors = [
    {name = "KOUASSI Yves", email = "kouassives@gmail.com"},
]
readme = "README.md"
dependencies = []

requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/kouassives/kyops/tree/main/Python"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest~=6.2",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
test.cmd = "pytest tests"
